@@ -19,6 +19,7 @@ Log:
 	- fixed TI73 sending & receiving of FLASH apps
 	- fixed OS version formatting
 	- set hw revision to -1 (n/a) for TI8x calcs
+	- don't use static Flash/FileContent structures: they are badly released because often not zero'ed.
 	
 - 20/02/2006, version 0.0.5: roms
 	- error message is a glib allocated string for now.
